r,a=beard@netscape.com. Bug #45415, fix LiveConnect memory leak.